jvb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: jvb
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      k8s-app: jvb
  template:
    metadata:
      labels:
        k8s-app: jvb
    spec:
      containers:
        - name: jvb
          ports:
          - containerPort: 30300
            protocol: UDP
          - containerPort: 4443        
          image: jitsi/jvb:stable-6433
          resources: {}
          imagePullPolicy: IfNotPresent
