web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: web
  name: web
  namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - name: "http"
    port: 80
    targetPort: 80
    nodePort: 32080
  - name: "https"
    port: 443
    targetPort: 443
    nodePort: 32443
  selector:
    k8s-app: web

# http://{NODE-IP}:32080
---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: jitsi
   namespace: jitsi
   annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
  tls:
    - hosts:
      - jitsimeet2.godeskless.com
      secretName: test-tls
  rules:
  - host: jitsimeet2.godeskless.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: https
